# complex-rag

./: .gitignore  ColPali as a reranker II(1).ipynb  README 2.md  README.md  RETRIEVAL_README.md  advanced_retrieval.py  api.py  app.py  build_embeddings.py  content.html  hybrid_results.json  indexing_full_pages_with_metadata.py  manual_structure.json  page_148_metadata.json  pyproject.toml  q&a.json  result.json  retrieval.py  retrieve.py  run_indexing.py  settings.py  setup.sh
colpali_experiments/: colpali_retrieval.py  convert_pages.py  create_embeddings.py  model.py  qdrant_manager.py
colpali_rag/: model.py
colpali_rag/core/: utils.py
colpali_rag/documents/: extract_figures_tables.py  schemas.py
colpali_rag/documents/algorithms/: flatten_table.py  map_question_chapter.py  user_query_decomposition.py
colpali_rag/documents/algorithms/metadata/: extract_page_context.py  extract_page_metadata_with_context.py  extract_table_metadata.py  extract_text_metadata.py  page_context.py  prompts.py
colpali_rag/ocr/: docling_ocr.py
colpali_rag/retrieval/: factory.py  types.py
colpali_rag/retrieval/strategies/: base.py
pdf-upload-app/: package-lock.json  package.json
pdf-upload-app/src/: App.js  App.tsx  index.css  index.tsx
pdf-upload-app/src/components/: PDFUploadApp.jsx  PDFUploadApp.tsx
scratch/short/page_13/tables/: table-6.html
scripts/: add_text_blocks_to_context.py  enhance_all_context_metadata.py  flatten_tables_in_context.py
scripts/qdrant_debug/: check_missing_pages.py  debug_collection.py  find_missing_pages.py  retry_failed_pages.py
(+12 files in other folders)
