[project]
name = "complex-rag"
version = "0.1.0"
description = "Complex RAG system using ColPali for automotive industry PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colpali-engine>=0.3.8",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.14.3",
    "torch>=2.7.1",
    "reportlab>=4.1.0",
    "youtube-transcript-api>=1.1.0",
    "langchain-community>=0.3.27",
    "docling>=2.39.0",
    "pdf2image>=1.17.0",
    "litellm>=1.73.6",
    "pymupdf>=1.26.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.scripts]
complex-rag = "main:main"
